Added most other reqs besides major

--- a/website.html
+++ b/website.html
@@ -196,7 +196,7 @@
                 <td><a href="#">See Hunter Core: CUNY Common Core section</a></td>
             </tr>
             <tr>
-                <td class="label">Hunter Focus: 12 credits required</td>
+                <td class="label">Hunter Focus</td>
                 <td id="stillNeeded">Still Needed:</td>
                 <td><a href="#">See Hunter Focus (12)-Foreign Lang./Concentrated Study section</a></td>
             </tr>
@@ -277,8 +277,7 @@
             <tr>
                 <td colspan="3" id="notes">
                     CHEM 120LC and CHEM 121LB must both be taken to apply towards Life & Physical Sciences or
-                    Scientific
-                    World.
+                    Scientific World.
                 </td>
             </tr>
             <tr>
@@ -345,9 +344,50 @@
                 <th colspan="3">Hunter Focus (12) - Foreign Language / Concentrated Study</th>
             </tr>
             <tr>
-                <td class="label">Template</td>
+                <td class="label" id="unmet">Unmet conditions for this set of requirements:</td>
+                <td colspan="2">
+                    12 credits are required. You currently have X#,  you still need Y# more credits.
+                </td>
+            </tr>
+            <tr id="notes">
+                <td class="label">
+                    List of Languages Offered at Hunter:
+                </td>
+                <td colspan="2">
+                    <h class="label">Africana and Puerto Rican/Latino Studies: </h>Swahili and Yoruba.<br>
+                    <h class="label">Classical and Oriental Studies: </h>Arabic, Chinese, Greek, Hebrew, Japanese, Latin, Polish, Russian, and German. <br>
+                    <h class="label">Romance Languages: </h>French, Italian, Spanish, and Portuguese.<br>
+                </td>
+                <!-- <tr>Bruh</tr> -->
+            </tr>
+            <tr>
+                <td class="label">Elementary I</td>
                 <td id="stillNeeded"></td>
                 <td></td>
+            </tr>
+            <tr>
+                <td class="label">Elementary II</td>
+                <td id="stillNeeded"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="label">Intermediate I</td>
+                <td id="stillNeeded"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td class="label">Intermediate II</td>
+                <td id="stillNeeded"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td colspan="3" id="notes">
+                    As of Fall 2017, language 10100 courses do not apply towards the Flexible Core; only towards the Hunter Focus, Foreign Language requirement.
+                    <br>
+                    IMPORTANT REMINDER: When a Focus Concentrated Study (FS) is needed, courses applied toward FS cannot share with Major 1.
+                    <br>
+                    Hunter Focus must be completed by courses in residence (completed at Hunter). 
+                </td>
             </tr>
 
             <!-- Writing Requirement -->
@@ -355,9 +395,18 @@
                 <th colspan="3">Writing Requirement</th>
             </tr>
             <tr>
-                <td class="label">Template</td>
-                <td id="stillNeeded"></td>
-                <td></td>
+                <td class="label" id="unmet">Unmet conditions for this set of requirements:</td>
+                <td colspan="2">
+                    9 credits of Writing Intensive Courses are required. You currently have X#,  you still need Y# more credits.
+                </td>
+            </tr>
+            <td colspan="3" id="notes">
+                Writing Intensive (WI) is SECTION specific, so it's important to confirm prior to enrollment that a course will apply to this requirement.  After you enroll and the course appears in DegreeWorks, if it is not applying below, then you are not in a WI Section. REMINDER: WI must be completed at Hunter; transferred courses do not apply.
+            </td>
+            <tr>
+                <td class="label">Writing Requirement: 3 Classes, WI sections</td>
+                <td id="stillNeeded">Still Needed:</td>
+                <td>**List of classes that fulfill this requirement**</td>
             </tr>
 
             <!-- Pluralism & Diversity Requirement -->
@@ -365,9 +414,38 @@
                 <th colspan="3">Pluralism & Diversity Requirement</th>
             </tr>
             <tr>
-                <td class="label">Template</td>
-                <td id="stillNeeded"></td>
-                <td></td>
+                <td class="label" id="unmet">Unmet conditions for this set of requirements:</td>
+                <td colspan="2">
+                    12 credits of Pluralism & Diversity Courses are required. You currently have X#,  you still need Y# more credits. 
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3" class="label">Pluralism & Diversity</td>
+            </tr>
+            <tr>
+                <td class="label" id="underSub">Group A: Non-European Societies</td>
+                <td id="stillNeeded">Still Needed:</td>
+                <td>**List of classes that fulfill this requirement**</td>
+            </tr>
+            <tr>
+                <td class="label" id="underSub">Group B: Groups in the U.S.A.</td>
+                <td id="stillNeeded">Still Needed:</td>
+                <td>**List of classes that fulfill this requirement**</td>
+            </tr>
+            <tr id="notes">
+                <td colspan="3" id="notes">
+                    BIOL 100 and 102 or 160 may satisfy either Group C or Group D  only if both courses are taken at Hunter. NOTE: Courses listed after the word 'Except' cannot be used on the rule.
+                </td>
+            </tr>
+            <tr>
+                <td class="label" id="underSub">Group C: Women, Gender & Sexual Orientation</td>
+                <td id="stillNeeded">Still Needed:</td>
+                <td>**List of classes that fulfill this requirement**</td>
+            </tr>
+            <tr>
+                <td class="label" id="underSub">Group D: European Societies</td>
+                <td id="stillNeeded">Still Needed:</td>
+                <td>**List of classes that fulfill this requirement**</td>
             </tr>
 
             <!-- Major in Computer Science -->
@@ -375,9 +453,38 @@
                 <th colspan="3">Major in Computer Science</th>
             </tr>
             <tr>
-                <td class="label">Template</td>
-                <td id="stillNeeded"></td>
-                <td></td>
+                <td class="label" id="unmet">Unmet conditions for this set of requirements:</td>
+                <td colspan="2">
+                    X# credits of Pluralism & Diversity Courses are required; you still need Y# more. 
+                </td>
+            </tr>
+            <tr>
+                <td colspan="3" class="label">Pluralism & Diversity: 12 CREDITS REQUIRED, select one from each Group</td>
+            </tr>
+            <tr>
+                <td class="label" id="underSub">Group A: Non-European Societies</td>
+                <td id="stillNeeded">Still Needed:</td>
+                <td>**List of classes that fulfill this requirement**</td>
+            </tr>
+            <tr>
+                <td class="label" id="underSub">Group B: Groups in the U.S.A.</td>
+                <td id="stillNeeded">Still Needed:</td>
+                <td>**List of classes that fulfill this requirement**</td>
+            </tr>
+            <tr id="notes">
+                <td colspan="3" id="notes">
+                    BIOL 100 and 102 or 160 may satisfy either Group C or Group D  only if both courses are taken at Hunter. NOTE: Courses listed after the word 'Except' cannot be used on the rule.
+                </td>
+            </tr>
+            <tr>
+                <td class="label" id="underSub">Group C: Women, Gender & Sexual Orientation</td>
+                <td id="stillNeeded">Still Needed:</td>
+                <td>**List of classes that fulfill this requirement**</td>
+            </tr>
+            <tr>
+                <td class="label" id="underSub">Group D: European Societies</td>
+                <td id="stillNeeded">Still Needed:</td>
+                <td>**List of classes that fulfill this requirement**</td>
             </tr>
         </table>
 
