requirement fulfilled and new buttons

--- a/website.html
+++ b/website.html
@@ -285,17 +285,17 @@
             </tr>
             <tr>
                 <td class="label" id="underSub">English Requirement</td>
-                <td id="stillNeeded">Still Needed:</td>
+                <td id="stillNeeded2">Still Needed:</td>
                 <td id="2"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Mathematical and Quantitative Reasoning</td>
-                <td id="stillNeeded">Still Needed:</td>
+                <td id="stillNeeded3">Still Needed:</td>
                 <td id="3"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Life & Physical Sciences</td>
-                <td id="stillNeeded">Still Needed:</td>
+                <td id="stillNeeded4">Still Needed:</td>
                 <td id="4"></td>
             </tr>
             <tr>
@@ -303,17 +303,17 @@
             </tr>
             <tr>
                 <td class="label" id="underSub">World Cultures and Global Issues</td>
-                <td id="stillNeeded">Still Needed:</td>
+                <td id="stillNeeded5">Still Needed:</td>
                 <td id="5"</td>
             </tr>
             <tr>
                 <td class="label" id="underSub">U.S. Experiences in Its Diversity</td>
-                <td id="stillNeeded">Still Needed:</td>
+                <td id="stillNeeded6">Still Needed:</td>
                 <td id="6"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Creative Expression</td>
-                <td id="stillNeeded">Still Needed:</td>
+                <td id="stillNeeded7">Still Needed:</td>
                 <td id="7"></td>
             </tr>
             <tr>
@@ -325,12 +325,12 @@
             </tr>
             <tr>
                 <td class="label" id="underSub">Individual and Society</td>
-                <td id="stillNeeded">Still Needed:</td>
+                <td id="stillNeeded8">Still Needed:</td>
                 <td id="8"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Scientific World</td>
-                <td id="stillNeeded">Still Needed:</td>
+                <td id="stillNeeded9">Still Needed:</td>
                 <td id="9"></td>
             </tr>
 
@@ -367,7 +367,7 @@
             </tr>
             <tr>
                 <td class="label">Intermediate I</td>
-                <td id="stillNeeded"></td>
+                <td id="stillNeeded10"></td>
                 <td id="10"></td>
             </tr>
             <tr>
@@ -401,7 +401,7 @@
             </td>
             <tr>
                 <td class="label">Writing Requirement: 3 Classes, WI sections</td>
-                <td id="stillNeeded">Still Needed:</td>
+                <td id="stillNeeded11">Still Needed:</td>
                 <td id="11"></td>
             </tr>
 
@@ -420,13 +420,13 @@
             </tr>
             <tr>
                 <td class="label" id="underSub">Group A: Non-European Societies</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeeded13">Still Needed:</td>
+                <td id="13"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Group B: Groups in the U.S.A.</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeeded14">Still Needed:</td>
+                <td id="14"></td>
             </tr>
             <tr id="notes">
                 <td colspan="3" id="notes">
@@ -435,13 +435,13 @@
             </tr>
             <tr>
                 <td class="label" id="underSub">Group C: Women, Gender & Sexual Orientation</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeeded15">Still Needed:</td>
+                <td id="15"></td>
             </tr>
             <tr>
                 <td class="label" id="underSub">Group D: European Societies</td>
-                <td id="stillNeeded">Still Needed:</td>
-                <td>**List of classes that fulfill this requirement**</td>
+                <td id="stillNeeded16">Still Needed:</td>
+                <tdid id="16"></td>
             </tr>
 
             <!-- Major in Computer Science -->
@@ -450,7 +450,7 @@
             </tr>
             <tr>
                 <td class="label">Template</td>
-                <td id="stillNeeded"></td>
+                <td id="stillNeeded17"></td>
                 <td id="17"></td>
             </tr>
         </table>
@@ -467,7 +467,469 @@
         </div> -->
     </div>
 
-    <div id="thirty"><p>35px</p></div>
+<div id="thirty"><p>35px</p></div>
+w3schools.comLOG INTHE WORLD'S LARGEST WEB DEVELOPER SITE
+JS Reference
+JS by Category
+JS by Alphabet
+
+JavaScript
+JS Array
+JS Boolean
+JS Classes
+JS Date
+JS Error
+JS Global
+JS JSON
+JS Math
+JS Number
+JS Operators
+JS RegExp
+JS Statements
+JS String
+
+HTML DOM
+DOM Attributes
+DOM Document
+DOM Element
+DOM Events
+DOM Event Objects
+DOM HTMLCollection
+DOM Location
+DOM Navigator
+DOM Screen
+DOM Style
+alignContent
+alignItems
+alignSelf
+animation
+animationDelay
+animationDirection
+animationDuration
+animationFillMode
+animationIterationCount
+animationName
+animationTimingFunction
+animationPlayState
+background
+backgroundAttachment
+backgroundColor
+backgroundImage
+backgroundPosition
+backgroundRepeat
+backgroundClip
+backgroundOrigin
+backgroundSize
+backfaceVisibility
+border
+borderBottom
+borderBottomColor
+borderBottomLeftRadius
+borderBottomRightRadius
+borderBottomStyle
+borderBottomWidth
+borderCollapse
+borderColor
+borderImage
+borderImageOutset
+borderImageRepeat
+borderImageSlice
+borderImageSource
+borderImageWidth
+borderLeft
+borderLeftColor
+borderLeftStyle
+borderLeftWidth
+borderRadius
+borderRight
+borderRightColor
+borderRightStyle
+borderRightWidth
+borderSpacing
+borderStyle
+borderTop
+borderTopColor
+borderTopLeftRadius
+borderTopRightRadius
+borderTopStyle
+borderTopWidth
+borderWidth
+bottom
+boxShadow
+boxSizing
+captionSide
+caretColor
+clear
+clip
+color
+columnCount
+columnFill
+columnGap
+columnRule
+columnRuleColor
+columnRuleStyle
+columnRuleWidth
+columns
+columnSpan
+columnWidth
+counterIncrement
+counterReset
+cursor
+direction
+display
+emptyCells
+filter
+flex
+flexBasis
+flexDirection
+flexFlow
+flexGrow
+flexShrink
+flexWrap
+cssFloat
+font
+fontFamily
+fontSize
+fontStyle
+fontVariant
+fontWeight
+fontSizeAdjust
+height
+isolation
+justifyContent
+left
+letterSpacing
+lineHeight
+listStyle
+listStyleImage
+listStylePosition
+listStyleType
+margin
+marginBottom
+marginLeft
+marginRight
+marginTop
+maxHeight
+maxWidth
+minHeight
+minWidth
+objectFit
+objectPosition
+opacity
+order
+orphans
+outline
+outlineColor
+outlineOffset
+outlineStyle
+outlineWidth
+overflow
+overflowX
+overflowY
+padding
+paddingBottom
+paddingLeft
+paddingRight
+paddingTop
+pageBreakAfter
+pageBreakBefore
+pageBreakInside
+perspective
+perspectiveOrigin
+position
+quotes
+resize
+right
+scrollBehavior
+tableLayout
+tabSize
+textAlign
+textAlignLast
+textDecoration
+textDecorationColor
+textDecorationLine
+textDecorationStyle
+textIndent
+textOverflow
+textShadow
+textTransform
+top
+transform
+transformOrigin
+transformStyle
+transition
+transitionProperty
+transitionDuration
+transitionTimingFunction
+transitionDelay
+unicodeBidi
+userSelect
+verticalAlign
+visibility
+width
+wordBreak
+wordSpacing
+wordWrap
+widows
+zIndex
+DOM Window
+
+Web APIs
+API Console
+API Geolocation
+API History
+API Storage
+
+HTML Objects
+<a>
+<abbr>
+<address>
+<area>
+<article>
+<aside>
+<audio>
+<b>
+<base>
+<bdo>
+<blockquote>
+<body>
+<br>
+<button>
+<canvas>
+<caption>
+<cite>
+<code>
+<col>
+<colgroup>
+<datalist>
+<dd>
+<del>
+<details>
+<dfn>
+<dialog>
+<div>
+<dl>
+<dt>
+<em>
+<embed>
+<fieldset>
+<figcaption>
+<figure>
+<footer>
+<form>
+<head>
+<header>
+<h1> - <h6>
+<hr>
+<html>
+<i>
+<iframe>
+<img>
+<ins>
+<input> button
+<input> checkbox
+<input> color
+<input> date
+<input> datetime
+<input> datetime-local
+<input> email
+<input> file
+<input> hidden
+<input> image
+<input> month
+<input> number
+<input> password
+<input> radio
+<input> range
+<input> reset
+<input> search
+<input> submit
+<input> text
+<input> time
+<input> url
+<input> week
+<kbd>
+<label>
+<legend>
+<li>
+<link>
+<map>
+<mark>
+<menu>
+<menuitem>
+<meta>
+<meter>
+<nav>
+<object>
+<ol>
+<optgroup>
+<option>
+<output>
+<p>
+<param>
+<pre>
+<progress>
+<q>
+<s>
+<samp>
+<script>
+<section>
+<select>
+<small>
+<source>
+<span>
+<strong>
+<style>
+<sub>
+<summary>
+<sup>
+<table>
+<tbody>
+<td>
+<tfoot>
+<th>
+<thead>
+<tr>
+<textarea>
+<time>
+<title>
+<track>
+<u>
+<ul>
+<var>
+<video>
+<p>
+Other References
+CSSStyleDeclaration
+JS Conversion
+
+
+
+Style color Property
+
+Example
+Set the text-color for different elements:
+
+document.getElementById("myH2").style.color = "#ff0000";
+document.getElementById("myP").style.color = "magenta";
+document.getElementById("myP2").style.color = "blue";
+document.getElementById("myDiv").style.color = "lightblue";
+Definition and Usage
+The color property sets or returns the color of the text.
+
+Browser Support
+Property					
+color	Yes	Yes	Yes	Yes	Yes
+Syntax
+Return the color property:
+
+object.style.color
+Set the color property:
+
+object.style.color = "color|initial|inherit"
+Property Values
+Value	Description
+color	Specifies the color of the text. Look at CSS Color Values for a complete list of possible color values
+initial	Sets this property to its default value. Read about initial
+inherit	Inherits this property from its parent element. Read about inherit
+Technical Details
+Default Value:	not specified 
+Return Value:	A String, representing the text-color of an element
+CSS Version	CSS1
+More Examples
+Example
+Return the text-color of a <p> element:
+
+alert(document.getElementById("myP").style.color);
+Related Pages
+CSS tutorial: CSS Text
+
+CSS reference: color property
+
+
+COLOR PICKER
+colorpicker
+LIKE US
+  
+Get your
+certification today!
+
+ 
+HOW TO
+Tabs
+Dropdowns
+Accordions
+Side Navigation
+Top Navigation
+Modal Boxes
+Progress Bars
+Parallax
+Login Form
+HTML Includes
+Google Maps
+Range Sliders
+Tooltips
+Slideshow
+Filter List
+Sort List
+Certificates
+Top Tutorials
+HTML Tutorial
+CSS Tutorial
+JavaScript Tutorial
+How To Tutorial
+SQL Tutorial
+Python Tutorial
+W3.CSS Tutorial
+Bootstrap Tutorial
+PHP Tutorial
+Java Tutorial
+C++ Tutorial
+jQuery Tutorial
+Top References
+HTML Reference
+CSS Reference
+JavaScript Reference
+SQL Reference
+Python Reference
+W3.CSS Reference
+Bootstrap Reference
+PHP Reference
+HTML Colors
+Java Reference
+Angular Reference
+jQuery Reference
+Top Examples
+HTML Examples
+CSS Examples
+JavaScript Examples
+How To Examples
+SQL Examples
+Python Examples
+W3.CSS Examples
+Bootstrap Examples
+PHP Examples
+Java Examples
+XML Examples
+jQuery Examples
+Web Certificates
+HTML Certificate
+CSS Certificate
+JavaScript Certificate
+SQL Certificate
+Python Certificate
+PHP Certificate
+Bootstrap Certificate
+XML Certificate
+jQuery Certificate
+W3Schools is optimized for learning and training. Examples might be simplified to improve reading and learning. Tutorials, references, and examples are constantly reviewed to avoid errors, but we cannot warrant full correctness of all content. While using W3Schools, you agree to have read and accepted our terms of use, cookie and privacy policy.
+
+Copyright 1999-2021 by Refsnes Data. All Rights Reserved.
+W3Schools is Powered by W3.CSS.
+
+W3Schools.com
+</p>
+
     <footer class="footer">Presented by: Asllan Alija Vasyl Ilnytskyy, and Hammad Siddiqui</footer>
 
 </body>
